--- a/Chikwamu/Exploring and Understanding Hockey Data.qmd
+++ b/Chikwamu/Exploring and Understanding Hockey Data.qmd
@@ -23,5 +23,325 @@ How do we define a consistent player?
 
     -   Metrics to look at:
 
-        -   means, variances within a season of valueble performance
-        -   Need to define valuable perfomance based on player type i.e goalie, forward or defense man
+        -   means, variances within a season of valuable performance
+        -   Need to define valuable performance based on player type i.e goalie, forward or defense man
+
+## Obtaining Data
+
+```{r}
+install.packages("rvest")
+```
+
+```{r}
+library(rvest)
+library(tidyverse)
+nhl_url <- "https://www.hockey-reference.com/teams/PIT/"
+nhl_url |> 
+  read_html()
+```
+
+```{r}
+nhl_tbl_2024 <- nhl_url |> 
+  read_html() |> 
+  html_element(css = "#div_skaters") |> 
+  html_table()
+nhl_tbl_2024
+```
+
+```{r}
+nhl_tbl_2024 <- nhl_url |> 
+  read_html() |> 
+  html_element(css = "#div_skaters") |> 
+  html_table()
+nhl_tbl_2024
+
+
+```
+
+Distribution of Positions:
+
+```{r}
+# Assign the first row as column names
+colnames(nhl_tbl_2024) <- nhl_tbl_2024[1, ]
+nhl_tbl_2024 <- nhl_tbl_2024[-1, ]
+
+```
+
+```{r}
+nhl_tbl_2024 |>
+  select(Pos)|> 
+  group_by(Pos)|>
+  count()
+```
+
+```{r}
+basic_2023_24 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_23_24.csv") |> 
+  rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+  mutate(start_year = 2023)
+```
+
+```{r}
+basic_2023_24
+```
+
+```{r}
+#filtering by position and selecting some metrics that maybe used to calculate and assess quality of defensemen
+defensemen <- basic_2023_24|>
+  filter(Pos == "D")|>
+  select(Player, Age, GP, G, A, PTS,PS, S, TOI, BLK, HIT)
+glimpse(defensemen)
+```
+
+
+##Some very uneccessary EDA to just get a sense of the distribution of variables
+```{r}
+theme_set(theme_light())
+# Plot the distribution of each variable
+variables <- c("Age", "GP", "G", "A", "PTS", "PS", "S", "TOI", "BLK", "HIT")
+
+# Create plots for each variable
+for (var in variables) {
+  p <- ggplot(defensemen, aes_string(x = var)) +
+    geom_histogram(binwidth = 1, fill = "lightblue") +
+    theme_minimal() +
+    labs(title = paste("Distribution of", var), x = var, y = "Frequency")
+  
+  print(p)
+}
+```
+
+
+```{r}
+# Calculate Blocks per Game (BPG) and Blocks per Minute (BPM)
+defensemen <- defensemen |>
+  mutate(
+    BPG = BLK / GP,
+    BPM = BLK / TOI
+  )
+# new defensemen with BPG and BPM
+glimpse(defensemen)
+```
+
+```{r}
+
+# Visualize Blocks per Game (BPG) and Blocks per Minute (BPM)
+
+# Blocks per Game
+ggplot(defensemen, aes(x = BPG)) +
+  geom_histogram(binwidth = 0.1, fill = "blue", color = "black") +
+  theme_minimal() +
+  labs(title = "Distribution of Blocks per Game (BPG) for Defensemen", x = "Blocks per Game", y = "Frequency")
+
+# Blocks per Minute
+ggplot(defensemen, aes(x = BPM)) +
+  geom_histogram(binwidth = 0.001, fill = "green", color = "black") +
+  theme_minimal() +
+  labs(title = "Distribution of Blocks per Minute (BPM) for Defensemen", x = "Blocks per Minute", y = "Frequency")
+
+# Scatter plot to visualize consistency
+ggplot(defensemen, aes(x = GP, y = BPG)) +
+  geom_point(aes(size = TOI, color = Player)) +
+  theme_minimal() +
+  labs(title = "Blocks per Game vs. Games Played", x = "Games Played (GP)", y = "Blocks per Game (BPG)")
+
+ggplot(defensemen, aes(x = TOI, y = BPM)) +
+  geom_point(aes(size = GP, color = Player)) +
+  theme_minimal() +
+  labs(title = "Blocks per Minute vs. Time on Ice", x = "Time on Ice (TOI)", y = "Blocks per Minute (BPM)")
+
+
+```
+
+
+##Data
+
+### Basic Statistics
+
+```{r}
+library(tidyverse)
+library(broom)
+
+knitr::opts_chunk$set(warning = FALSE, message = FALSE)
+
+basic_2023_24 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_23_24.csv") |>
+rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+mutate(start_year = 2023)
+
+basic_2022_23 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_22_23.csv") |>
+rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+mutate(start_year = 2022)
+
+basic_2021_22 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_21_22.csv") |>
+rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+mutate(start_year = 2021)
+
+basic_2020_21 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_20_21.csv") |>
+rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+mutate(start_year = 2020)
+
+basic_2019_20 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_19_20.csv") |>
+rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+mutate(start_year = 2019)
+
+basic_2018_19 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_18_19.csv") |>
+rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+mutate(start_year = 2018)
+
+basic_2017_18 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_17_18.csv") |>
+rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+mutate(start_year = 2017)
+
+basic_2016_17 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Basic%20Stats/basic_stats_16_17.csv") |>
+rename(EVG = EV...13, PPG = PP...14, SHG = SH...15, EVA = EV...17, PPA = PP...18, SHA = SH...19) |>
+mutate(start_year = 2016)
+# combined basic stats
+basic_df <- rbind(basic_2023_24, basic_2022_23, basic_2021_22, basic_2020_21, basic_2021_22, 
+                     basic_2020_21, basic_2019_20, basic_2018_19, basic_2017_18, basic_2016_17)
+```
+
+
+
+```{r}
+knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
+long_basic_df <- basic_df |> 
+  pivot_wider(id_cols = c(Player, PlayerID), 
+              values_from = c(G, A, PTS, `+/-`, `S%`, PS), 
+              names_from = start_year)
+
+long_basic_df <- long_basic_df |>
+  unnest() |> 
+  mutate(across(everything(), ~ifelse(. == "NULL", NA, .)))
+
+long_basic_df <- long_basic_df |> 
+  unique()
+
+```
+
+### Miscellaneous Statistics
+
+```{r, include=FALSE}
+knitr::opts_chunk$set(warning = FALSE, message = FALSE)
+
+misc_2023_24 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_23_24.csv") |>
+mutate(start_year = 2023)
+
+misc_2022_23 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_22_23.csv") |>
+mutate(start_year = 2022)
+
+misc_2021_22 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_21_22.csv") |>
+mutate(start_year = 2021)
+
+misc_2020_21 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_20_21.csv") |>
+mutate(start_year = 2020)
+
+misc_2019_20 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_19_20.csv") |>
+mutate(start_year = 2019)
+
+misc_2018_19 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_18_19.csv") |>
+mutate(start_year = 2018)
+
+misc_2017_18 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_17_18.csv") |>
+mutate(start_year = 2017)
+
+misc_2016_17 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Misc%20Stats/misc_stats_16_17.csv") |>
+mutate(start_year = 2016)
+
+misc_df <- rbind(misc_2023_24, misc_2022_23, misc_2021_22, misc_2020_21, misc_2019_20,  misc_2018_19, misc_2017_18, misc_2016_17)
+
+
+
+```
+
+## Some metrics based on Mis stats
+
+```{r} knitr::opts_chunk$set(warning = FALSE, message = FALSE)}
+
+long_misc_df <- misc_df |>
+filter(Pos != "G") |>
+pivot_wider(id_cols = c(Player),
+values_from = c(`G/GP`, `A/GP`, `PTS/GP`, `GC/GP`, `S/GP`, `OPS`, `DPS`, `PS`),
+names_from = start_year)
+
+long_misc_df <- long_misc_df |>
+unnest() |>
+replace(. == "NULL", NA)
+# mutate(across(`G/GP_2023`:`PS_2016`, ~replace_na(.x, 0)))
+
+long_misc_df_exp <- long_misc_df |>
+group_by(Player) |>
+summarize(ptspg_diff_23_22 = abs(`PTS/GP_2023` - `PTS/GP_2022`),
+ptspg_diff_22_21 = abs(`PTS/GP_2022` - `PTS/GP_2021`),
+ptspg_diff_21_20 = abs(`PTS/GP_2021` - `PTS/GP_2020`),
+ptspg_diff_20_19 = abs(`PTS/GP_2020` - `PTS/GP_2019`),
+ptspg_diff_19_18 = abs(`PTS/GP_2019` - `PTS/GP_2018`),
+ptspg_diff_18_17 = abs(`PTS/GP_2018` - `PTS/GP_2017`),
+ptspg_diff_17_16 = abs(`PTS/GP_2017` - `PTS/GP_2016`),
+ops_diff_23_22 = abs(OPS_2023 - OPS_2022),
+ops_diff_22_21 = abs(OPS_2022 - OPS_2021),
+ops_diff_21_20 = abs(OPS_2021 - OPS_2020),
+ops_diff_20_19 = abs(OPS_2020 - OPS_2019),
+ops_diff_19_18 = abs(OPS_2019 - OPS_2018),
+ops_diff_18_17 = abs(OPS_2018 - OPS_2017),
+ps_diff_17_16 = abs(OPS_2017 - OPS_2016))
+```
+
+### Advanced Statistics
+
+```{r, include=FALSE}
+knitr::opts_chunk$set(warning = FALSE, message = FALSE)
+
+advanced_2023_24 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_23_24.csv") |>
+mutate(start_year = 2023)
+
+advanced_2022_23 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_22_23.csv") |>
+mutate(start_year = 2022)
+
+advanced_2021_22 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_21_22.csv") |>
+mutate(start_year = 2021)
+
+advanced_2020_21 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_20_21.csv") |>
+mutate(start_year = 2020)
+
+advanced_2019_20 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_19_20.csv") |>
+mutate(start_year = 2019)
+
+advanced_2018_19 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_18_19.csv") |>
+mutate(start_year = 2018)
+
+advanced_2017_18 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_17_18.csv") |>
+mutate(start_year = 2017)
+
+advanced_2016_17 <- read_csv("https://raw.githubusercontent.com/CelineS138/Penguins-Capstone-Project/main/Data/Advanced%20Stats/advanced_stats_16_17.csv") |>
+mutate(start_year = 2016)
+advanced_df <- rbind(advanced_2023_24, advanced_2022_23, advanced_2021_22, advanced_2020_21, advanced_2019_20, advanced_2018_19, advanced_2017_18, advanced_2016_17)
+```
+
+ ## Analysis
+ 
+```{r}
+library(dplyr)
+
+# Calculate league averages for points per game and time on ice per game each year
+league_avg_stats <- long_basic_df |>
+  group_by(start_year)|>
+  summarise(
+    league_avg_pts_per_gp = mean(PTS/GP, na.rm = TRUE),
+    league_avg_toi_per_gp = mean(TOI/GP, na.rm = TRUE)
+  )
+
+# Join the averages back to the original data and calculate normalized metrics
+basic_df <- long_basic_df|>
+  left_join(league_avg_stats, by = "start_year") |>
+  mutate(
+    norm_pts_per_gp = (PTS/GP) / league_avg_pts_per_gp,
+    norm_toi_per_gp = (TOI/GP) / league_avg_toi_per_gp
+  )
+
+# Display the resulting dataframe
+print(basic_df)
+
+```
+ 
+
+ 
+ 
